<resources>
    <string name="app_name">ContactsApp</string>
    <string name="action_settings">Settings</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="contactName">Profile picture</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="saveUser">Save user</string>
    <string name="add_contact_title">Add contact</string>
    <string name="quote">Inspirational quote</string>
</resources>
