<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:padding="4dp"
        android:rowCount="4">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="0"
            android:contentDescription="@string/profilePicture"
            android:padding="20dp"
            android:src="@drawable/ic_add_a_photo_grey_24dp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_row="1"
            android:contentDescription="@string/profilePicture"
            android:padding="4dp"
            android:src="@drawable/ic_person_grey_24dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/contactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="center_vertical"
                android:layout_row="1"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:layout_marginEnd="15dp"
                android:padding="5dp"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_row="2"
            android:contentDescription="@string/phone"
            android:padding="4dp"
            android:src="@drawable/ic_phone_grey_24dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/contactPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="5dp" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_row="3"
            android:contentDescription="@string/mail"
            android:padding="4dp"
            android:src="@drawable/ic_mail_grey_24dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/contactEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:padding="5dp" />
        </android.support.design.widget.TextInputLayout>

    </GridLayout>


</android.support.constraint.ConstraintLayout>